# python-project-template

./: .gitignore  .pre-commit-config.yaml  Brewfile  Justfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
