[project]
name = "python-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "python_project_template"
module-root = "."

[tool.uv]
required-version = ">=0.8.4"

[tool.ruff]
target-version = 'py313'
line-length = 95
indent-width = 4

[tool.ruff.lint]
select = [
    "RUF", # Ruff specific rules
    "N",   # pep8-naming
    "I",   # isort
    "F",   # pyflakes
    "UP",  # pyupgrade
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
]

ignore = [
    "E501",   # line-too-long
    "T201",   # print
    "S101",   # use of assert
    "ANN003", # missing type annotation for kwargs
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ty.environment]
root = ["python_project_template"]
python = "./.venv"

[tool.uv-secure.vulnerability_criteria]
show_severity = true
ignore_unfixed = true

[tool.uv-secure.maintainability_criteria]
forbid_yanked = true
forbid_archived = true
forbid_deprecated = true
forbid_quarantined = true
