[project]
name = "python-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "python_project_template"
module-root = "."

[tool.uv]
required-version = ">=0.8.4"

[tool.ruff]
target-version = 'py313'
line-length = 95
indent-width = 4

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "RUF", # Ruff specific rules
    "S",   # flake8-bandit
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

ignore = [
    "E501",   # line-too-long
    "T201",   # print
    "S101",   # use of assert
    "ANN003", # missing type annotation for kwargs
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ty.environment]
root = ["python_project_template"]
python = "./.venv"

[tool.uv-secure.vulnerability_criteria]
show_severity = true
ignore_unfixed = true

[tool.uv-secure.maintainability_criteria]
forbid_yanked = true
forbid_deprecated = true
forbid_quarantined = true
